Arrumando erro UTF-8

--- a/converter_pdf.ipynb
+++ b/converter_pdf.ipynb
@@ -2,121 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error importing jpype dependencies. Fallback to subprocess.\n",
-      "No module named 'jpype'\n",
-      "Got stderr: abr. 27, 2024 11:06:47 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: inherited resources of source document are not imported to destination page\n",
-      "abr. 27, 2024 11:06:48 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: call importedPage.setResources(page.getResources()) to do this\n",
-      "abr. 27, 2024 11:06:49 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: inherited resources of source document are not imported to destination page\n",
-      "abr. 27, 2024 11:06:49 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: call importedPage.setResources(page.getResources()) to do this\n",
-      "abr. 27, 2024 11:06:50 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: inherited resources of source document are not imported to destination page\n",
-      "abr. 27, 2024 11:06:50 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: call importedPage.setResources(page.getResources()) to do this\n",
-      "abr. 27, 2024 11:06:50 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: inherited resources of source document are not imported to destination page\n",
-      "abr. 27, 2024 11:06:50 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: call importedPage.setResources(page.getResources()) to do this\n",
-      "abr. 27, 2024 11:06:51 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: inherited resources of source document are not imported to destination page\n",
-      "abr. 27, 2024 11:06:51 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: call importedPage.setResources(page.getResources()) to do this\n",
-      "abr. 27, 2024 11:06:52 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: inherited resources of source document are not imported to destination page\n",
-      "abr. 27, 2024 11:06:52 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: call importedPage.setResources(page.getResources()) to do this\n",
-      "abr. 27, 2024 11:06:52 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: inherited resources of source document are not imported to destination page\n",
-      "abr. 27, 2024 11:06:52 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: call importedPage.setResources(page.getResources()) to do this\n",
-      "abr. 27, 2024 11:06:53 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: inherited resources of source document are not imported to destination page\n",
-      "abr. 27, 2024 11:06:53 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: call importedPage.setResources(page.getResources()) to do this\n",
-      "abr. 27, 2024 11:06:53 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: inherited resources of source document are not imported to destination page\n",
-      "abr. 27, 2024 11:06:53 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: call importedPage.setResources(page.getResources()) to do this\n",
-      "abr. 27, 2024 11:06:53 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: inherited resources of source document are not imported to destination page\n",
-      "abr. 27, 2024 11:06:53 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: call importedPage.setResources(page.getResources()) to do this\n",
-      "abr. 27, 2024 11:06:53 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: inherited resources of source document are not imported to destination page\n",
-      "abr. 27, 2024 11:06:53 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: call importedPage.setResources(page.getResources()) to do this\n",
-      "abr. 27, 2024 11:06:54 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: inherited resources of source document are not imported to destination page\n",
-      "abr. 27, 2024 11:06:54 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: call importedPage.setResources(page.getResources()) to do this\n",
-      "abr. 27, 2024 11:06:54 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: inherited resources of source document are not imported to destination page\n",
-      "abr. 27, 2024 11:06:54 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: call importedPage.setResources(page.getResources()) to do this\n",
-      "abr. 27, 2024 11:06:54 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: inherited resources of source document are not imported to destination page\n",
-      "abr. 27, 2024 11:06:54 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: call importedPage.setResources(page.getResources()) to do this\n",
-      "abr. 27, 2024 11:06:54 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: inherited resources of source document are not imported to destination page\n",
-      "abr. 27, 2024 11:06:54 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: call importedPage.setResources(page.getResources()) to do this\n",
-      "abr. 27, 2024 11:06:54 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: inherited resources of source document are not imported to destination page\n",
-      "abr. 27, 2024 11:06:54 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: call importedPage.setResources(page.getResources()) to do this\n",
-      "abr. 27, 2024 11:06:55 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: inherited resources of source document are not imported to destination page\n",
-      "abr. 27, 2024 11:06:55 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: call importedPage.setResources(page.getResources()) to do this\n",
-      "abr. 27, 2024 11:06:55 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: inherited resources of source document are not imported to destination page\n",
-      "abr. 27, 2024 11:06:55 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: call importedPage.setResources(page.getResources()) to do this\n",
-      "abr. 27, 2024 11:06:55 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: inherited resources of source document are not imported to destination page\n",
-      "abr. 27, 2024 11:06:55 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: call importedPage.setResources(page.getResources()) to do this\n",
-      "abr. 27, 2024 11:06:55 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: inherited resources of source document are not imported to destination page\n",
-      "abr. 27, 2024 11:06:55 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: call importedPage.setResources(page.getResources()) to do this\n",
-      "abr. 27, 2024 11:06:55 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: inherited resources of source document are not imported to destination page\n",
-      "abr. 27, 2024 11:06:55 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: call importedPage.setResources(page.getResources()) to do this\n",
-      "abr. 27, 2024 11:06:56 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: inherited resources of source document are not imported to destination page\n",
-      "abr. 27, 2024 11:06:56 PM org.apache.pdfbox.pdmodel.PDDocument importPage\n",
-      "WARNING: call importedPage.setResources(page.getResources()) to do this\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "UnicodeDecodeError",
-     "evalue": "'utf-8' codec can't decode byte 0xf3 in position 737: invalid continuation byte",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 20\u001b[0m\n\u001b[0;32m     17\u001b[0m     caminho_pdf \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(diretorio_pdf, arquivo_pdf)\n\u001b[0;32m     18\u001b[0m \u001b[38;5;66;03m#print(caminho_pdf)\u001b[39;00m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Extrair tabelas do arquivo PDF e armazenar em um DataFrame do pandas\u001b[39;00m\n\u001b[1;32m---> 20\u001b[0m     tabelas \u001b[38;5;241m=\u001b[39m \u001b[43mtabula\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_pdf\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcaminho_pdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpages\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mall\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmultiple_tables\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m     22\u001b[0m     \u001b[38;5;66;03m# Exibir as tabelas extraídas\u001b[39;00m\n\u001b[0;32m     23\u001b[0m     tabela_df \u001b[38;5;241m=\u001b[39m [(pd\u001b[38;5;241m.\u001b[39mDataFrame(tabela))\u001b[38;5;28;01mfor\u001b[39;00m tabela \u001b[38;5;129;01min\u001b[39;00m tabelas]\n",
-      "File \u001b[1;32mc:\\Users\\paaml\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\tabula\\io.py:395\u001b[0m, in \u001b[0;36mread_pdf\u001b[1;34m(input_path, output_format, encoding, java_options, pandas_options, multiple_tables, user_agent, use_raw_url, pages, guess, area, relative_area, lattice, stream, password, silent, columns, relative_columns, format, batch, output_path, force_subprocess, options)\u001b[0m\n\u001b[0;32m    392\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpath\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is empty. Check the file, or download it manually.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    394\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 395\u001b[0m     output \u001b[38;5;241m=\u001b[39m \u001b[43m_run\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    396\u001b[0m \u001b[43m        \u001b[49m\u001b[43mtabula_options\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    397\u001b[0m \u001b[43m        \u001b[49m\u001b[43mjava_options\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    398\u001b[0m \u001b[43m        \u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    399\u001b[0m \u001b[43m        \u001b[49m\u001b[43mencoding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mencoding\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    400\u001b[0m \u001b[43m        \u001b[49m\u001b[43mforce_subprocess\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mforce_subprocess\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    401\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    402\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m    403\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m temporary:\n",
-      "File \u001b[1;32mc:\\Users\\paaml\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\tabula\\io.py:82\u001b[0m, in \u001b[0;36m_run\u001b[1;34m(options, java_options, path, encoding, force_subprocess)\u001b[0m\n\u001b[0;32m     79\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mset\u001b[39m(java_options) \u001b[38;5;241m-\u001b[39m IGNORED_JAVA_OPTIONS:\n\u001b[0;32m     80\u001b[0m     logger\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mjava_options is ignored until rebooting the Python process.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 82\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_tabula_vm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcall_tabula_java\u001b[49m\u001b[43m(\u001b[49m\u001b[43moptions\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\paaml\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\tabula\\backend.py:117\u001b[0m, in \u001b[0;36mSubprocessTabula.call_tabula_java\u001b[1;34m(self, options, path)\u001b[0m\n\u001b[0;32m    115\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m result\u001b[38;5;241m.\u001b[39mstderr:\n\u001b[0;32m    116\u001b[0m         logger\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGot stderr: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresult\u001b[38;5;241m.\u001b[39mstderr\u001b[38;5;241m.\u001b[39mdecode(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mencoding)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m--> 117\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mresult\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstdout\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mencoding\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    118\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m:\n\u001b[0;32m    119\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m JavaNotFoundError(JAVA_NOT_FOUND_ERROR)\n",
-      "\u001b[1;31mUnicodeDecodeError\u001b[0m: 'utf-8' codec can't decode byte 0xf3 in position 737: invalid continuation byte"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import openpyxl\n",
@@ -124,7 +12,7 @@
     "import tabula\n",
     "\n",
     "# Caminho da pasta dos arquivos\n",
-    "diretorio_pdf = r\"C:\\Users\\paaml\\OneDrive\\Área de Trabalho\\Python-Automação\\GitHub\\Converssor_PDF\\Conversor-de-PDF-para-Excel\\Pedidos\"\n",
+    "diretorio_pdf = r'C:\\Users\\paaml\\OneDrive\\Área de Trabalho\\Python-Automação\\GitHub\\Converssor_PDF\\Conversor-de-PDF-para-Excel\\Pedidos'\n",
     "\n",
     "# Listar todos os arquivos na pasta\n",
     "arquivos_pdf = os.listdir(diretorio_pdf)\n",
@@ -137,11 +25,11 @@
     "        caminho_pdf = os.path.join(diretorio_pdf, arquivo_pdf)\n",
     "    #print(caminho_pdf)\n",
     "    # Extrair tabelas do arquivo PDF e armazenar em um DataFrame do pandas\n",
-    "        tabelas = tabula.read_pdf(caminho_pdf, pages='all', multiple_tables=True)\n",
+    "        tabelas = tabula.read_pdf(caminho_pdf, pages='all', multiple_tables=True, encoding='latin-1')\n",
     "\n",
     "        # Exibir as tabelas extraídas\n",
     "        tabela_df = [(pd.DataFrame(tabela))for tabela in tabelas]\n",
-    "        print(tabela_df)\n",
+    "        #print(tabela_df)\n",
     "               \n",
     "        # Transformar ás tabelas extraidas em um arquivo excel. E salvar.\n",
     "        with pd.ExcelWriter(f'{arquivo_pdf}.xlsx') as writer:\n",
